--- a/LanguagePace/Views/Account/Register.cshtml
+++ b/LanguagePace/Views/Account/Register.cshtml
@@ -12,26 +12,32 @@
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+        <div class="col-md-offset-1 col-md-11 input-group">
+            <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = Html.DisplayNameFor(m => m.Email) })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        <div class="col-md-offset-1 col-md-11 input-group">
+            <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
+            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = Html.DisplayNameFor(m => m.Username) })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        <div class="col-md-offset-1 col-md-11 input-group">
+            <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = Html.DisplayNameFor(m => m.Password) })
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+        <div class="col-md-offset-1 col-md-11 input-group">
+            <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = Html.DisplayNameFor(m => m.ConfirmPassword) })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-1 col-md-11">
+            <button id="btnRegister" type="submit" class="btn btn-success"><i class='fa fa-check fa-fw'></i>Register</button>
         </div>
     </div>
 }
