--- a/LanguagePace/Views/Home/Index.cshtml
+++ b/LanguagePace/Views/Home/Index.cshtml
@@ -1,4 +1,13 @@
-﻿@{
+﻿@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@
+
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -12,9 +21,8 @@
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            LanguagePace is a very powerful tool for learning a new language. It gives you the ability to meet people
+            who are learning the same language, or even native speakers!
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
