--- a/LanguagePace/Views/Account/Login.cshtml
+++ b/LanguagePace/Views/Account/Login.cshtml
@@ -1,4 +1,13 @@
-﻿@using LanguagePace.Models
+﻿@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@
+
+@using LanguagePace.Models
 @model LoginViewModel
 @{
     ViewBag.Title = "Log in";
