--- a/LanguagePace/Views/Home/About.cshtml
+++ b/LanguagePace/Views/Home/About.cshtml
@@ -1,4 +1,13 @@
-﻿@{
+﻿@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@
+
+@{
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
