--- a/LanguagePace/Views/Shared/Error.cshtml
+++ b/LanguagePace/Views/Shared/Error.cshtml
@@ -1,4 +1,13 @@
-﻿@model System.Web.Mvc.HandleErrorInfo
+﻿@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@
+
+@model System.Web.Mvc.HandleErrorInfo
 
 @{
     ViewBag.Title = "Error";
