--- a/LanguagePace/Views/Shared/_LoginPartial.cshtml
+++ b/LanguagePace/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,13 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@
+
+@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
