--- a/LanguagePace/Views/_ViewStart.cshtml
+++ b/LanguagePace/Views/_ViewStart.cshtml
@@ -1,3 +1,12 @@
-﻿@{
+﻿@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@
+
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
