--- a/LanguagePace/Views/Manage/ManageLogins.cshtml
+++ b/LanguagePace/Views/Manage/ManageLogins.cshtml
@@ -6,6 +6,15 @@
 
 <h2>@ViewBag.Title.</h2>
 
+@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@
+
 <p class="text-success">@ViewBag.StatusMessage</p>
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
