--- a/LanguagePace/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/LanguagePace/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,13 @@
-﻿@model LanguagePace.Models.ExternalLoginConfirmationViewModel
+﻿@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@
+
+@model LanguagePace.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
