--- a/LanguagePace/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/LanguagePace/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,13 @@
-﻿@model LanguagePace.Models.ExternalLoginListViewModel
+﻿@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@
+
+@model LanguagePace.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
