--- a/LanguagePace/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/LanguagePace/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,13 @@
-﻿@model LanguagePace.Models.VerifyPhoneNumberViewModel
+﻿@* Copyright (C) LanguagePace.Com
+    - All Rights Reserved
+    * Unauthorized copying of this file, via any medium is strictly prohibited
+    * Proprietary and confidential
+    * Written by Travis Wiggins
+    <LanguagePace@Yahoo.com>,
+    July 24th 2017
+*@ 
+
+@model LanguagePace.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
