--- a/LanguagePace/Views/Shared/_Layout.cshtml
+++ b/LanguagePace/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        <li>@Html.Partial("_CultureSwitcherPartial")</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
