--- a/LanguagePace/Views/Shared/_Layout.cshtml
+++ b/LanguagePace/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     July 24th 2017
 *@
 
+@using LanguagePace.Localizations;
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,7 +31,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink(Labels.Home, "Index", "Home")</li>
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         <li>@Html.Partial("_CultureSwitcherPartial")</li>
