--- a/LanguagePace/Views/Shared/_CultureSwitcherPartial.cshtml
+++ b/LanguagePace/Views/Shared/_CultureSwitcherPartial.cshtml
@@ -13,7 +13,7 @@
     string currentCultureDisplayName = currentCulture.Parent.NativeName;
 }
 <div class="btn-group">
-    <button type="button" class="btn btn-primary">
+    <button type="button" class="btn btn-primary navbar-btn">
         @foreach (var culture in supportedCultures)
         {
             if (culture.Name == currentCulture.Name)
@@ -22,7 +22,7 @@
             }
         }
     </button>
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-chevron-down"></i></button>
+    <button class="btn btn-primary navbar-btn dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-chevron-down"></i></button>
 
     <ul class="dropdown-menu">
         @foreach (var culture in supportedCultures)
