--- a/LanguagePace.Web/Content/LanguagePace/_scaffolding.scss
+++ b/LanguagePace.Web/Content/LanguagePace/_scaffolding.scss
@@ -1,4 +1,12 @@
-﻿body {
+﻿// Copyright (C) LanguagePace.com
+// - All Rights Reserved
+// Unauthorized copying of this file, via any medium is strictly prohibited
+// proprietary and confidential
+// Written by Travis Wiggins, Erik Hattervig
+// August 24th 2017
+//
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
