About page and Layout

--- a/LanguagePace.Web/Views/Home/About.cshtml
+++ b/LanguagePace.Web/Views/Home/About.cshtml
@@ -8,9 +8,27 @@
 *@
 
 @{
-    ViewBag.Title = "About";
+    ViewBag.Title = "";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>About our project</h2>
 
-<p>Use this area to provide additional information.</p>
+<div class="row">
+    <div class="col-md-4">
+        <h2>Getting started</h2>
+        <p>
+            LanguagePace is a very powerful tool for learning a new language. It gives you the ability to meet people
+            who are learning the same language, or even native speakers!
+        </p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Get more libraries</h2>
+        <p>Yo...................................</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Web Hosting</h2>
+        <p>Yo...................................</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    </div>
+</div>
